Modifyinf PredicateParty.java